test/langtools/tools/javac/forLoopVarsEffectivelyFinal/ForLoopVarsEffectivelyFinalInvalidTest.out
ForLoopVarsEffectivelyFinalInvalidTest.java:58:35: compiler.err.var.might.not.have.been.initialized: i
ForLoopVarsEffectivelyFinalInvalidTest.java:16:35: compiler.err.cant.ref.non.effectively.final.var: i, (compiler.misc.lambda)
ForLoopVarsEffectivelyFinalInvalidTest.java:22:57: compiler.err.cant.ref.non.effectively.final.var: i, (compiler.misc.lambda)
ForLoopVarsEffectivelyFinalInvalidTest.java:31:39: compiler.err.cant.ref.non.effectively.final.var: i, (compiler.misc.lambda)
ForLoopVarsEffectivelyFinalInvalidTest.java:40:38: compiler.err.cant.ref.non.effectively.final.var: i, (compiler.misc.lambda)
ForLoopVarsEffectivelyFinalInvalidTest.java:49:39: compiler.err.cant.ref.non.effectively.final.var: i, (compiler.misc.lambda)
ForLoopVarsEffectivelyFinalInvalidTest.java:67:55: compiler.err.cant.ref.non.effectively.final.var: i, (compiler.misc.lambda)
ForLoopVarsEffectivelyFinalInvalidTest.java:77:55: compiler.err.cant.ref.non.effectively.final.var: i, (compiler.misc.lambda)
8 errors
